objects/Quality_Assessment_Question__c.object
<CustomObject>
    <fields>
        <fullName>Help_Comment_Chinese__c</fullName>
        <label>Help Comment Chinese</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Comment_English__c</fullName>
        <label>Help Comment English</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Comment_German__c</fullName>
        <label>Help Comment German</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Comment_Japanese__c</fullName>
        <label>Help Comment Japanese</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Chinese__c</fullName>
        <label>Question Chinese</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_English__c</fullName>
        <label>Question English</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_German__c</fullName>
        <label>Question German</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Japanese__c</fullName>
        <label>Question Japanese</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Quality Assessment Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Question_English__c</columns>
        <columns>Help_Comment_English__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>QAQ-{000000}</displayFormat>
        <label>Quality Assessment Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Assessment Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>